--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-calculator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://Ruy-Araujo.github.io/React-Calculator",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -11,7 +12,6 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
-  "homepage": "http://{Ruy-Araujo}.github.io/{React-Calculator}",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
